# cli-tui-py

./: README.md  pyproject.toml  requirements.txt
cli_tui_eg_py/: main.py  template.py
