[tool.poetry]
name = "cli-tui-eg-py"
version = "0.1.0"
description = ""
authors = ["lynn <lynn@lynndotpy.xyz>"]
readme = "README.md"
packages = [{include = "cli_tui_eg_py"}]

[tool.poetry.dependencies]
python = "^3.10"
argparse = "^1.4.0"
pyinquirer = "^1.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
